--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "autoprefixer": "10.4.16",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "date-fns-tz": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
-    "next": "13.5.2",
+    "next": "^13.5.5-canary.3",
+    "next-themes": "^0.2.1",
     "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
