--- a/package.json
+++ b/package.json
@@ -41,9 +41,11 @@
     "date-fns-tz": "^2.0.0",
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
+    "i18next": "^23.5.1",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
     "next": "^13.5.5-canary.3",
+    "next-i18next": "^14.0.3",
     "next-themes": "^0.2.1",
     "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
@@ -53,6 +55,7 @@
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.46.2",
+    "react-i18next": "^13.2.2",
     "react-loading-skeleton": "^3.3.1",
     "react-markdown": "^8.0.7",
     "react-pdf": "^7.3.3",
