--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
+    "howler": "^2.2.4",
     "i18next": "^23.5.1",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
@@ -70,6 +71,10 @@
     "tailwindcss-animate": "^1.0.7",
     "typescript": "5.2.2",
     "uploadthing": "^5.6.1",
+    "use-sound": "^4.0.1",
     "zod": "^3.21.4"
+  },
+  "devDependencies": {
+    "@types/howler": "^2.2.9"
   }
 }
