--- a/package.json
+++ b/package.json
@@ -43,10 +43,12 @@
     "eslint": "8.49.0",
     "eslint-config-next": "13.5.2",
     "framer-motion": "^10.16.4",
+    "fs": "^0.0.1-security",
     "howler": "^2.2.4",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
     "next": "^13.5.5-canary.3",
+    "next-share": "^0.27.0",
     "next-themes": "^0.2.1",
     "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
