--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "prisma generate"
   },
   "dependencies": {
+    "@formatjs/intl-localematcher": "^0.4.2",
     "@hookform/resolvers": "^3.3.1",
     "@kinde-oss/kinde-auth-nextjs": "^1.8.18",
     "@mantine/hooks": "^7.0.1",
@@ -29,6 +30,7 @@
     "@trpc/next": "^10.38.4",
     "@trpc/react-query": "^10.38.4",
     "@trpc/server": "^10.38.4",
+    "@types/negotiator": "^0.6.1",
     "@types/node": "20.6.3",
     "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
@@ -47,6 +49,7 @@
     "howler": "^2.2.4",
     "langchain": "^0.0.153",
     "lucide-react": "^0.279.0",
+    "negotiator": "^0.6.3",
     "next": "^13.5.5-canary.3",
     "next-share": "^0.27.0",
     "next-themes": "^0.2.1",
