--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@radix-ui/react-slider": "^1.1.2",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.4",
-    "@radix-ui/react-tooltip": "^1.0.6",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "@tailwindcss/typography": "^0.5.10",
     "@tanstack/react-query": "^4.35.3",
     "@trpc/client": "^10.38.4",
@@ -51,8 +51,10 @@
     "lucide-react": "^0.279.0",
     "negotiator": "^0.6.3",
     "next": "^13.5.5-canary.3",
+    "next-i18next": "^14.0.3",
     "next-share": "^0.27.0",
     "next-themes": "^0.2.1",
+    "next-unused": "^0.0.6",
     "openai": "^4.10.0",
     "pdf-parse": "^1.1.1",
     "postcss": "8.4.30",
