--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-pdf": "^7.3.3",
     "react-resize-detector": "^9.1.0",
     "react-textarea-autosize": "^8.5.3",
+    "react-toastify": "^9.1.3",
     "simplebar-react": "^3.2.4",
     "stripe": "^13.8.0",
     "tailwind-merge": "^1.14.0",
